force-app/main/default/objects/LabData__c/LabData__c.object-meta.xml
<CustomObject>
    <label>Lab Data</label>
    <nameField>
        <label>Lab Data</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lab Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>