force-app/main/default/objects/LabData__c/fields/Mobile_number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_number__c</fullName>
    <label>Mobile number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>