force-app/main/default/objects/LabData__c/fields/Sampling_date__c.field-meta.xml
<CustomField>
    <fullName>Sampling_date__c</fullName>
    <label>Sampling date</label>
    <type>Date</type>
</CustomField>