force-app/main/default/objects/LabData__c/fields/Sampling_time__c.field-meta.xml
<CustomField>
    <fullName>Sampling_time__c</fullName>
    <label>Sampling time</label>
    <type>Time</type>
</CustomField>