force-app/main/default/objects/LabData__c/fields/Street_No__c.field-meta.xml
<CustomField>
    <fullName>Street_No__c</fullName>
    <label>Street / No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>