force-app/main/default/objects/LabData__c/fields/Test_Antigen_PCR__c.field-meta.xml
<CustomField>
    <fullName>Test_Antigen_PCR__c</fullName>
    <label>Test (Antigen / PCR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>