force-app/main/default/objects/LabData__c/fields/Test_result__c.field-meta.xml
<CustomField>
    <fullName>Test_result__c</fullName>
    <label>Test result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>