force-app/main/default/objects/LabData__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_name__c</columns>
    <columns>Last_name__c</columns>
    <columns>Postal_code__c</columns>
    <columns>Country__c</columns>
    <columns>Birth_date__c</columns>
    <columns>Mobile_number__c</columns>
    <columns>EMail__c</columns>
    <columns>Test_Antigen_PCR__c</columns>
    <columns>Sampling_date__c</columns>
    <columns>Sampling_time__c</columns>
    <columns>Test_result__c</columns>
    <columns>isProcessed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>