force-app/main/default/objects/LabData__c/listViews/Unmatched_Records.listView-meta.xml
<ListView>
    <fullName>Unmatched_Records</fullName>
    <columns>NAME</columns>
    <columns>First_name__c</columns>
    <columns>Last_name__c</columns>
    <columns>Birth_date__c</columns>
    <columns>Mobile_number__c</columns>
    <columns>EMail__c</columns>
    <columns>Test_Antigen_PCR__c</columns>
    <columns>Sampling_date__c</columns>
    <columns>Sampling_time__c</columns>
    <columns>Test_result__c</columns>
    <columns>Match__c</columns>
    <columns>isProcessed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isProcessed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Match__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Test_Antigen_PCR__c</field>
        <operation>equals</operation>
        <value>PCR</value>
    </filters>
    <label>Unmatched Records</label>
</ListView>